SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Saved Session groups: New toolbar and Session menu "Save/manage group of saved Session" allows to save
  multiple Sessions and their SQL editors.
  - To reopen a group use the "Open Saved Session or groups" toolbar button or Session menu.
  - Note: The "Save/manage group of saved Session" dialog offers an optimization
    which allows to save all open Sessions by using the ctrl+alt+shift+m shortcut to open the dialog
    and then hitting enter to save or GIT commit.

SQL editor's right mouse menu offers to execute SQLs.

Bug fixes:

Editable cell data popup: When updating data fails with a "No rows updated" message box
  the message box was poorly positioned.

When new users with fresh installations close SQuirreL with an open Session
  they are shown the Session-close confirmation message box.
  If then they check the confirmation message box to be not shown again
  and close the message box by the No-button, SQuirreL lost their "not shown again" choice.


4.7.1 (02/20/2024)
==================

Enhancements:

Alias schema properties: When schemas where filtered by comma separated names
  There are new options to specify if tables, views, procedures, UDTs should be loaded.
  See right mouse click on Alias --> Alias Properties --> tab Schemas
  --> Checkboxes behind radio button "Load schemas filtered by name"

Multiple Alias modification: Added progress dialog and old backups cleanup.

Multiple Alias modification:
   In Aliases view toolbar button or right mouse menu "Modify multiple Aliases".

Table cell data popup and the Object tree source tab searching now has a mark matches all button.

Upgraded to latest RSyntax version 6.0.2.

Look and Feel plugin: Upgrade FlatLaF to version 3.2.5.
