@@ -86,3 +86,9 @@ DontShowAgainDialog.yes.mnemonic=y
 DontShowAgainDialog.no=No
 DontShowAgainDialog.no.mnemonic=n
 DontShowAgainDialog.cancel=Cancel
+
+
+ResizableTextEditDialog.ok=Ok
+ResizableTextEditDialog.cancel=Cancel
+
+ResizableTextEditDialog.empty.name=Please enter a nonempty name
